overflow fix

--- a/src/components/PhotoCollage.css
+++ b/src/components/PhotoCollage.css
@@ -2,35 +2,47 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     padding: 100px;
     gap: 15px;
 }
 
 .vertical-columns-container, .horizontal-row-container {
     display: flex;
-    width: 100%;
-    justify-content: center;
+    justify-content: space-between;
     gap: 15px;
     /* background-color: rgba(255, 0, 0, 0.2); */
 }
 
 .vertical-columns-container {
-    justify-content: space-between;
 }
 
 .horizontal-row-container {
-    flex-direction: row;
-    background-color: rgba(255, 0, 0, 0.2); 
-}
-
-.column {
-    flex: 1; 
+    max-width: 100%;
     flex-direction: column;
     background-color: rgba(255, 0, 0, 0.2); 
 }
 
-img {
+.column {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 0, 0, 0.2); 
+}
+
+.row {
+    max-width: 100%;
+    display: flex;
+    gap: 15px;
+    background-color: rgba(255, 0, 0, 0.2); 
+}
+
+.row img {
+    flex-grow: 1;   /* Allows the item to grow and take available space */
+    flex-shrink: 1; /* Allows the item to shrink if necessary */
+    flex-basis: auto; /* Default value, can be adjusted based on your needs */
+    overflow: hidden;
+}
+
+.column img {
     max-width: 100%;  /* Ensures image does not grow larger than the container */
     height: auto;     /* Maintains aspect ratio */
 }
